--- a/style/_global.scss
+++ b/style/_global.scss
@@ -16,19 +16,15 @@ html {
 
 body {
     background-color: $fondo;
-    width: minmax(600px, 1000px);
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin: 2vh 2vw;
     height: 100%;
-    .text-danger {
-        color: $rojo ;
-    }
+    align-items: center;
     p {
         font-size: clamp(1.5rem, 2vw, 4rem);
         font-family: "Verdana", "Geneva", sans-serif;
         max-width: 90vw;
         color:white;
-        margin: 10px;
+        margin: 30px 40px;
         text-align: center;
         overflow-wrap: break-word;
         word-break: break-word;
@@ -43,8 +39,12 @@ hr {
     border: none;
 }
 
-.header {
+.header { 
+    margin: 10px auto 40px;
+    width: 100%;
+    max-width: 100%;
     .headerImage {
+        text-align: center;
         margin: 30px auto;
         width: 60%;
         img {
@@ -54,25 +54,23 @@ hr {
     }
     h1 {
         font-family: Trebuchet MS, sans-serif;
-        font-size: clamp(4.5rem, 4vw, 7rem);
+        font-size: clamp(4.5rem, 4vw, 14rem);
         letter-spacing: 0.10em;
         color:white;
         text-align: center;
-        flex-wrap: wrap;
         overflow-wrap: break-word;
         height: auto;
-        margin: 15px 0;
+        margin: 20px 0;
     }
     h2 {
         font-family: Trebuchet MS, sans-serif;
-        font-size: clamp(3rem, 4vw, 5rem);
+        font-size: clamp(3rem, 4vw, 12rem);
         letter-spacing: 0.10em;
         color: $rojo-fuerte;
         font-style: italic;
         text-align: center;
         margin-top: 15px;
         margin-bottom: 30px;
-        flex-wrap: wrap;
         overflow-wrap: break-word;
     }
     hr {
@@ -83,7 +81,7 @@ hr {
 
 nav {
     width: 80%;
-    margin: 0 auto;
+    margin: 5px auto;
     background-color: $fondo;
     .navbar-toggler {
         background-color: $fondo;
@@ -93,7 +91,7 @@ nav {
         .navbar-nav {
             flex-wrap: wrap;
             .nav-link {
-                font-size: clamp(1rem, 2vw, 1.5rem);
+                font-size: clamp(1.5rem, 2vw, 5rem);
                 color: $naranja;
                 transition: all 0.5s ease;
                 &:hover {
@@ -116,6 +114,7 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
     text-align: center;
     margin: 10px auto 20px auto;
     a {
@@ -135,28 +134,30 @@ nav {
     }
 }
 
-/*Global Media Queries
-They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para móvil después!!
-*/
-
+/*Global Media Queries*/
 
 @media (max-width: 1024px) {
     html {
         background-color: $fondo;
-        margin: 2vh 2vw;
     }
     body {
         background-color: $fondo;
-        width: minmax(500px, 1024px);
-        margin: 0px 2vw;
+        min-width: 500px;
+        max-width: 1024px;
+        margin: 2vh 2vw;
         height: 100%;
+        p {
+            font-size: clamp(2rem, 2vw, 3.5rem);
+            margin: 20px 30px;
+        }
     }
     hr {
-        margin: 10px auto;
+        margin: 20px auto;
     }
     .header {
+        margin: 10px auto 20px;
         .headerImage {
-            margin: 20px auto;
+            margin: 20px 10px;
             width: 100%;
             img {
                 width: 100%;
@@ -164,15 +165,12 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
             }
         }
         h1 {
-            font-size: clamp(2.5rem, 2vw, 5rem);
-            letter-spacing: 0.10em;
-            margin: 15px 0;
+            letter-spacing: 0.05em;
+            margin: 15px auto;
         }
         h2 {
-            font-size: clamp(2rem, 2vw, 3.5rem);
-            letter-spacing: 0.10em;
-            margin-top: 15px;
-            margin-bottom: 30px;
+            letter-spacing: 0.05em;
+            margin: 15px auto;
         }
         hr {
             margin: 15px auto;            
@@ -191,15 +189,16 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 }
 
 @media (max-width: 480px) {
-    html {
-        background-color: $fondo;
-        margin: 4vh 4vw;
-    }
     body {
         background-color: $fondo;
-        width: minmax(300px, 480px);
-        margin: 0px 2vw;
+        max-width: 480px;
+        min-width: 300px;
+        margin: 2vh 4vw;
         height: 100%;
+        p {
+            font-size: calc(0.75em + 1vmin);
+            margin: 20px;
+        }
     }
     hr {
         margin: 10px auto;
@@ -228,9 +227,6 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
             margin: 15px auto;            
         }
     }
-        p {
-            font-size: clamp(1.5rem, 2vw, 4rem);
-        }
         .footer {
             a {
                 img {
