--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*Partials y Variables*/
 * {
   margin: 0;
@@ -12,20 +11,16 @@ html {
 
 body {
   background-color: #000000;
-  width: minmax(600px, 1000px);
-  margin-left: 2vw;
-  margin-right: 2vw;
+  margin: 2vh 2vw;
   height: 100%;
+  align-items: center;
 }
-body .text-danger {
-  color: #dc3545;
-}
-body p, body .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 body h3 {
+body p, body .mainGrid h3, .mainGrid body h3 {
   font-size: clamp(1.5rem, 2vw, 4rem);
   font-family: "Verdana", "Geneva", sans-serif;
   max-width: 90vw;
   color: white;
-  margin: 10px;
+  margin: 30px 40px;
   text-align: center;
   overflow-wrap: break-word;
   word-break: break-word;
@@ -39,7 +34,13 @@ hr {
   border: none;
 }
 
+.header {
+  margin: 10px auto 40px;
+  width: 100%;
+  max-width: 100%;
+}
 .header .headerImage {
+  text-align: center;
   margin: 30px auto;
   width: 60%;
 }
@@ -49,25 +50,23 @@ hr {
 }
 .header h1 {
   font-family: Trebuchet MS, sans-serif;
-  font-size: clamp(4.5rem, 4vw, 7rem);
+  font-size: clamp(4.5rem, 4vw, 14rem);
   letter-spacing: 0.1em;
   color: white;
   text-align: center;
-  flex-wrap: wrap;
   overflow-wrap: break-word;
   height: auto;
-  margin: 15px 0;
+  margin: 20px 0;
 }
 .header h2 {
   font-family: Trebuchet MS, sans-serif;
-  font-size: clamp(3rem, 4vw, 5rem);
+  font-size: clamp(3rem, 4vw, 12rem);
   letter-spacing: 0.1em;
   color: #e60127;
   font-style: italic;
   text-align: center;
   margin-top: 15px;
   margin-bottom: 30px;
-  flex-wrap: wrap;
   overflow-wrap: break-word;
 }
 .header hr {
@@ -77,7 +76,7 @@ hr {
 
 nav {
   width: 80%;
-  margin: 0 auto;
+  margin: 5px auto;
   background-color: #000000;
 }
 nav .navbar-toggler {
@@ -88,7 +87,7 @@ nav #navbarContent .navbar-nav {
   flex-wrap: wrap;
 }
 nav #navbarContent .navbar-nav .nav-link {
-  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-size: clamp(1.5rem, 2vw, 5rem);
   color: #ffc107;
   transition: all 0.5s ease;
 }
@@ -108,6 +107,7 @@ nav .navbar-toggler {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
   text-align: center;
   margin: 10px auto 20px auto;
 }
@@ -127,25 +127,30 @@ nav .navbar-toggler {
   transform: scale(1.2);
 }
 
-/*Global Media Queries
-They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para móvil después!!
-*/
+/*Global Media Queries*/
 @media (max-width: 1024px) {
   html {
     background-color: #000000;
-    margin: 2vh 2vw;
   }
   body {
     background-color: #000000;
-    width: minmax(500px, 1024px);
-    margin: 0px 2vw;
+    min-width: 500px;
+    max-width: 1024px;
+    margin: 2vh 2vw;
     height: 100%;
   }
+  body p, body .mainGrid h3, .mainGrid body h3 {
+    font-size: clamp(2rem, 2vw, 3.5rem);
+    margin: 20px 30px;
+  }
   hr {
-    margin: 10px auto;
+    margin: 20px auto;
+  }
+  .header {
+    margin: 10px auto 20px;
   }
   .header .headerImage {
-    margin: 20px auto;
+    margin: 20px 10px;
     width: 100%;
   }
   .header .headerImage img {
@@ -153,20 +158,17 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
     height: auto;
   }
   .header h1 {
-    font-size: clamp(2.5rem, 2vw, 5rem);
-    letter-spacing: 0.1em;
-    margin: 15px 0;
+    letter-spacing: 0.05em;
+    margin: 15px auto;
   }
   .header h2 {
-    font-size: clamp(2rem, 2vw, 3.5rem);
-    letter-spacing: 0.1em;
-    margin-top: 15px;
-    margin-bottom: 30px;
+    letter-spacing: 0.05em;
+    margin: 15px auto;
   }
   .header hr {
     margin: 15px auto;
   }
-  p, .mainGrid .indexTexto1 h3 {
+  p, .mainGrid h3 {
     font-size: clamp(1.5rem, 2vw, 4rem);
   }
   .footer a img {
@@ -174,15 +176,16 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   }
 }
 @media (max-width: 480px) {
-  html {
-    background-color: #000000;
-    margin: 4vh 4vw;
-  }
   body {
     background-color: #000000;
-    width: minmax(300px, 480px);
-    margin: 0px 2vw;
+    max-width: 480px;
+    min-width: 300px;
+    margin: 2vh 4vw;
     height: 100%;
+  }
+  body p, body .mainGrid h3, .mainGrid body h3 {
+    font-size: calc(0.75em + 1vmin);
+    margin: 20px;
   }
   hr {
     margin: 10px auto;
@@ -208,9 +211,6 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   }
   .header hr {
     margin: 15px auto;
-  }
-  p, .mainGrid .indexTexto1 h3 {
-    font-size: clamp(1.5rem, 2vw, 4rem);
   }
   .footer a img {
     width: 80%;
@@ -235,11 +235,10 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 .title404 {
   grid-area: title404;
   justify-content: center;
-  margin: 40px auto 20px;
+  margin: 20px auto 20px;
 }
 .title404 h2 {
-  font-weight: bold;
-  color: #dc3545;
+  color: #e60127;
   font-weight: bold;
   font-size: clamp(3rem, 2vw, 6rem);
   height: 100%;
@@ -253,8 +252,7 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 .scotty404 {
   grid-area: scotty404;
   text-align: center;
-  margin: auto;
-  padding: 20px;
+  margin: 20px auto;
   width: 100%;
 }
 .scotty404 img {
@@ -275,16 +273,9 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   padding: 20px;
   letter-spacing: 0.1em;
 }
-.caption404 p, .caption404 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .caption404 h3 {
-  font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
-  max-width: 90vw;
-  font-size: clamp(1.5rem, 5vh, 6rem);
-  color: white;
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  overflow-wrap: break-word;
-  word-break: break-word;
+.caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3 {
+  max-width: 80vw;
+  font-size: clamp(2.5rem, 2vh, 5rem);
 }
 
 .hr2 {
@@ -299,8 +290,8 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   .title404 {
     font-size: calc(1.5em + 1vmin);
   }
-  .caption404 p, .caption404 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .caption404 h3 {
-    font-size: calc(0.75em + 1vmin);
+  .caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3 {
+    font-size: calc(1em + 1vmin);
   }
 }
 @media (max-width: 480px) {
@@ -329,15 +320,12 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 
 .aboutTitle {
   grid-area: aboutTitle;
-}
-.aboutTitle p, .aboutTitle .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .aboutTitle h3 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: clamp(2rem, 4vw, 10rem);
-  margin-top: 2rem;
+  font-family: Trebuchet MS, sans-serif;
+  font-size: clamp(2rem, 2vw, 6rem);
   color: #ffc107;
   text-align: center;
-  flex-wrap: wrap;
   height: auto;
+  margin: 10px;
 }
 
 .hr2 {
@@ -367,19 +355,6 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 100%;
-  padding: 20px;
-}
-.aboutTexto1 p, .aboutTexto1 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .aboutTexto1 h3, .aboutTexto2 p, .aboutTexto2 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .aboutTexto2 h3 {
-  font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
-  max-width: 90vw;
-  font-size: clamp(1.5rem, 5vh, 6rem);
-  color: white;
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  overflow-wrap: break-word;
-  word-break: break-word;
 }
 
 .hr4 {
@@ -402,7 +377,7 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   grid-area: footer;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   .aboutBanner, .aboutFoto2 {
     display: flex;
     width: auto;
@@ -417,17 +392,13 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
     padding: 20px;
     flex-grow: 1;
   }
-  .aboutTexto1 p, .aboutTexto1 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .aboutTexto1 h3, .aboutTexto2 p, .aboutTexto2 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .aboutTexto2 h3 {
-    width: 100%;
-    text-align: center;
-    font-size: calc(0.75em + 1vmin);
-    padding: 20px;
-    white-space: normal;
-  }
 }
 @media (max-width: 480px) {
   body {
     box-sizing: border-box;
+  }
+  .aboutBanner img:hover, .aboutFoto2 img:hover {
+    transform: none;
   }
 }
 /*Styling of the Program webpage*/
@@ -477,7 +448,7 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 .programText {
   grid-area: programText;
 }
-.programText p, .programText .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .programText h3 {
+.programText p, .programText .mainGrid h3, .mainGrid .programText h3 {
   margin: 10px;
 }
 
@@ -544,9 +515,6 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 }
 
 @media (max-width: 1024px) {
-  .programText p, .programText .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .programText h3 {
-    font-size: calc(0.75em + 1vmin);
-  }
   .table {
     max-width: 95%;
     margin: 0 auto;
@@ -559,11 +527,8 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   }
 }
 @media (max-width: 480px) {
-  body {
-    box-sizing: border-box;
-  }
   .carousel {
-    padding: 15px;
+    margin: 10px auto;
     max-width: 100%;
   }
   .carousel-inner .carousel-item img {
@@ -591,7 +556,7 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 .scottyI1 {
   grid-area: scottyI1;
   text-align: center;
-  margin: 50px auto 20px;
+  margin: 20px auto;
 }
 .scottyI1 img {
   max-width: 100%;
@@ -612,13 +577,8 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   flex-direction: column;
   height: auto;
   align-items: center;
-  height: auto;
 }
-.scottyT1 p, .scottyT1 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .scottyT1 h3, .scottyT3 p, .scottyT3 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .scottyT3 h3, .scottyT2 p, .scottyT2 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .scottyT2 h3 {
-  font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
-  font-size: clamp(1rem, 2vw, 4rem);
-  margin: 40px 40px;
-  color: white;
+.scottyT1 p, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT3 p, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3, .scottyT2 p, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3 {
   font-style: italic;
 }
 
@@ -639,10 +599,6 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 }
 .scottyCarousel .carousel {
   box-sizing: border-box;
-  max-width: 50%;
-}
-.scottyCarousel .carousel .carousel-inner .carousel-item {
-  margin: auto;
 }
 .scottyCarousel .carousel .carousel-inner .carousel-item img {
   height: auto;
@@ -685,8 +641,8 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 }
 
 @media (max-width: 1024px) {
-  .scottyT1 p, .scottyT1 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .scottyT1 h3, .scottyT2 p, .scottyT2 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .scottyT2 h3, .scottyT3 p, .scottyT3 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .scottyT3 h3 {
-    font-size: calc(0.75em + 1vmin);
+  .scottyT1 p, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT2 p, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3, .scottyT3 p, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3 {
+    font-size: calc(1em + 1vmin);
   }
 }
 @media (max-width: 480px) {
@@ -695,6 +651,9 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
     width: 100%;
     margin-left: 0;
     margin-right: 0;
+  }
+  .scottyI1 img:hover {
+    transform: none;
   }
 }
 /*Styling of the Videos webpage*/
@@ -760,7 +719,7 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 .videoT3 {
   grid-area: videoT3;
 }
-.videoT3 p a span, .videoT3 .mainGrid .indexTexto1 h3 a span, .mainGrid .indexTexto1 .videoT3 h3 a span {
+.videoT3 p a span, .videoT3 .mainGrid h3 a span, .mainGrid .videoT3 h3 a span {
   font-style: italic;
 }
 
@@ -777,8 +736,12 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 }
 
 @media (max-width: 1024px) {
-  .videoT1 p, .videoT1 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .videoT1 h3, .videoT2 p, .videoT2 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .videoT2 h3, .videoT3 p, .videoT3 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .videoT3 h3 {
-    font-size: calc(0.75em + 1vmin);
+  .video1, .video2, .video3 {
+    display: flex;
+    flex-shrink: 1;
+  }
+  .video1 iframe, .video2 iframe, .video3 iframe {
+    flex: 1 1 100%;
   }
 }
 @media (max-width: 480px) {
@@ -810,14 +773,12 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   grid-auto-rows: auto;
   gap: 10px;
   margin: 20px;
-  padding: 50px;
   grid-template-areas: "indexImagen titleContainer" "indexImagen indexTexto1";
 }
 .mainGrid .indexImagen {
   grid-area: indexImagen;
   position: sticky;
   align-self: start;
-  top: 20px;
 }
 .mainGrid .indexImagen img {
   max-width: 100%;
@@ -829,21 +790,12 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   font-weight: bold;
   color: #dc3545;
   font-weight: bold;
-  font-size: clamp(1.2rem, 2vw, 6rem);
+  font-size: clamp(2rem, 2vw, 6rem);
   height: 100%;
   text-align: center;
 }
 .mainGrid .indexTexto1 {
   grid-area: indexTexto1;
-}
-.mainGrid .indexTexto1 p, .mainGrid .indexTexto1 h3 {
-  font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
-  color: white;
-  width: 100%;
-  padding: 5px;
-  line-height: 2;
-  font-size: clamp(0.4rem, 2vw, 4rem);
-  margin-bottom: 10px;
 }
 .hr1 {
   grid-area: hr1;
@@ -856,17 +808,12 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
   height: auto;
   overflow: visible;
 }
-.indexTexto2 p, .indexTexto2 .mainGrid .indexTexto1 h3, .mainGrid .indexTexto1 .indexTexto2 h3 {
-  color: white;
-  font-size: clamp(1rem, 2vw, 4rem);
-  margin: 40px 40px;
-}
-.indexTexto2 p a, .indexTexto2 .mainGrid .indexTexto1 h3 a, .mainGrid .indexTexto1 .indexTexto2 h3 a {
+.indexTexto2 p a, .indexTexto2 .mainGrid h3 a, .mainGrid .indexTexto2 h3 a {
   text-decoration: none;
   display: inline-block;
   transition: all 0.5s ease;
 }
-.indexTexto2 p a:hover, .indexTexto2 .mainGrid .indexTexto1 h3 a:hover, .mainGrid .indexTexto1 .indexTexto2 h3 a:hover {
+.indexTexto2 p a:hover, .indexTexto2 .mainGrid h3 a:hover, .mainGrid .indexTexto2 h3 a:hover {
   color: #dc3545;
 }
 
@@ -880,42 +827,42 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
 
 /*Media Queries*/
 @media (max-width: 1024px) {
-  body {
-    width: 100%;
-    align-items: center;
-  }
   .indexGrid {
-    margin: 0 auto;
+    margin: 5px;
+  }
+  .indexGrid p, .indexGrid .mainGrid h3, .mainGrid .indexGrid h3 {
+    font-size: calc(0.75em + 1vmin);
   }
   .mainGrid {
-    grid-area: mainGrid;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto;
     grid-auto-columns: auto;
     gap: 10px;
-    margin: 20px auto;
+    margin: 20px 0px;
+    padding: 0px 10px;
     grid-template-areas: "indexImagen" "titleContainer" "indexTexto1";
   }
   .mainGrid .indexImagen {
     grid-area: indexImagen;
     position: static;
-    margin: 5px auto;
+    max-width: 90%;
+    text-align: center;
   }
   .mainGrid .indexImagen img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     object-fit: cover;
   }
   .mainGrid .titleContainer {
     grid-area: titleContainer;
+    margin: 10px auto;
     justify-content: center;
   }
-  .mainGrid .titleContainer p, .mainGrid .titleContainer .indexTexto1 h3, .mainGrid .indexTexto1 .titleContainer h3 {
+  .mainGrid .titleContainer p, .mainGrid .titleContainer h3 {
     font-weight: bold;
     color: #dc3545;
     font-weight: bold;
-    font-size: calc(0.75em + 1vmin);
+    font-size: calc(1em + 1vmin);
     text-align: center;
   }
   .mainGrid .indexTexto1 {
@@ -923,21 +870,19 @@ They BOTH apply as they cascade; escribí primero 1024, y sólo ajustamos para m
     overflow: visible;
   }
   .mainGrid .indexTexto1 .textContainer p, .mainGrid .indexTexto1 .textContainer h3 {
-    font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
-    color: white;
-    width: 100%;
-    padding: 5px;
     line-height: 1.5;
-    font-size: calc(0.75em + 1vmin);
     margin-bottom: 10px;
   }
 }
 @media (max-width: 480px) {
   body {
-    box-sizing: border-box;
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+    max-width: 480px;
+    min-width: 300px;
+  }
+  .indexImagen {
+    max-width: 100%;
+    margin: 15px 20px;
+    padding: 0;
   }
 }
 
