--- a/style/_global.scss
+++ b/style/_global.scss
@@ -80,7 +80,7 @@ hr {
 }
 
 nav {
-    width: 80%;
+    width: 90%;
     margin: 5px auto;
     background-color: $fondo;
     .navbar-toggler {
@@ -89,7 +89,7 @@ nav {
     }
     #navbarContent {
         .navbar-nav {
-            flex-wrap: wrap;
+            flex-wrap: wrap;            
             .nav-link {
                 font-size: clamp(1.5rem, 2vw, 5rem);
                 color: $naranja;
@@ -137,11 +137,7 @@ nav {
 /*Global Media Queries*/
 
 @media (max-width: 1024px) {
-    html {
-        background-color: $fondo;
-    }
     body {
-        background-color: $fondo;
         min-width: 500px;
         max-width: 1024px;
         margin: 2vh 2vw;
@@ -176,21 +172,67 @@ nav {
             margin: 15px auto;            
         }
     }
-        p {
-            font-size: clamp(1.5rem, 2vw, 4rem);
+    nav {
+        margin: 10px auto;
+    }
+    p {
+        font-size: clamp(1.5rem, 2vw, 4rem);
+    }
+
+    .footer {
+        a {
+            img {
+                width: 80%;
+            }
         }
-        .footer {
-            a {
-                img {
-                    width: 80%;
+    }
+}
+@media (max-width: 991px) {
+    body {
+        nav {
+            #navbarContent {
+                .navbar-nav {
+                    flex-direction: column !important;
+                    flex-flow: column;
+                    align-items: center;
+                    justify-items: center;
                 }
             }
         }
+        #programCarousel {
+            max-width: 90vw;
+            max-height: 90%;
+            margin: 10px;
+            .carousel-inner{
+                .carousel-item {
+                    img {
+                        width: 100%;
+                        height: auto;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+        #scottyCarousel{
+            max-width: 90vw;
+            max-height: 80%;
+            margin: 10px;
+            .carousel-inner{
+                .carousel-item {
+                    img {
+                        width: 100%;
+                        height: auto;
+                        max-height: 80%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 480px) {
     body {
-        background-color: $fondo;
         max-width: 480px;
         min-width: 300px;
         margin: 2vh 4vw;
@@ -227,11 +269,29 @@ nav {
             margin: 15px auto;            
         }
     }
-        .footer {
-            a {
-                img {
-                    width: 80%;
+    .footer {
+        a {
+            img {
+                width: 80%;
+                transition: none;
+                &:hover {
+                    transform: none;
                 }
             }
         }
+    }
+}
+
+@media (max-width: 300px) {
+    body {
+        max-width: 300px;
+        min-width: 2500px;
+        width: 100%;
+        margin: 2vh 2vw;
+        height: 100%;
+        p {
+            font-size: calc(0.65em + 1vmin);
+            margin: 15px;
+        }
+    }
 }
