--- a/style/_program.scss
+++ b/style/_program.scss
@@ -40,7 +40,7 @@ $naranja2: #896805;
     }
 }
 #programCarousel {
-    margin: 40px 0px 0px;
+    margin: 20px 0px;
 }
 .hr2 { grid-area: hr2; }
 .programText { grid-area: programText;
