--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -24,7 +24,7 @@
     h2 {
         text-align: center;
         a {
-            font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
+            font-family: "Verdana", "Geneva", sans-serif;
             font-size: clamp(2rem, 2vw, 4rem);
             color: $naranja;
             font-weight: bold;
@@ -86,11 +86,48 @@
             margin: 10px auto;
             }
     }
-
+    .videoT1 {
+        margin: 15px;
+    }
 }
 
 @media (max-width: 480px) {
     body {
-        box-sizing: border-box;
+        .videosGrid {
+            max-width: 100%;
+        }
+        .video1, .video2, .video3 {
+            margin: 10px 5px;
+            iframe {
+                min-height: 100px;
+                width: auto;
+                max-width: 400px;
+                margin: 10px auto;
+                }
+        }
+        .videoT1 {
+            h2 {
+                a {
+                    font-size: calc(0.75em + 1vmin);
+                    margin: 10px auto;
+                    transition: color 2s ease;
+                    &:hover {
+                        transform: none;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 350px) {
+    body {
+        .video1, .video2, .video3 {
+            iframe {
+                width: auto;
+                min-width: 250px;
+                max-width: 100%;
+                margin: 10px auto;
+                }
+        }
     }
 }
