--- a/style/_about.scss
+++ b/style/_about.scss
@@ -72,8 +72,10 @@
         align-items: center;
         width: 100%;
         max-height: none;
-        padding: 20px;
         flex-grow: 1;
+    }
+    .aboutTitle {
+        margin: 0px auto 30px;
     }
 }
 
