--- a/style/_global.scss
+++ b/style/_global.scss
@@ -239,7 +239,7 @@ nav {
         height: 100%;
         p {
             font-size: calc(0.75em + 1vmin);
-            margin: 20px;
+            margin: 20px 15px;
         }
     }
     hr {
