--- a/style/style.css
+++ b/style/style.css
@@ -279,14 +279,15 @@ nav .navbar-toggler {
 .title404 {
   grid-area: title404;
   justify-content: center;
-  margin: 20px auto 20px;
+  margin: 20px auto;
 }
 .title404 h2 {
   color: #e60127;
   font-weight: bold;
-  font-size: clamp(3rem, 2vw, 6rem);
+  font-size: clamp(2.5rem, 2vw, 6rem);
   height: 100%;
   text-align: center;
+  margin: 0px;
 }
 
 .hr1 {
@@ -300,7 +301,7 @@ nav .navbar-toggler {
   width: 100%;
 }
 .scotty404 img {
-  width: 50%;
+  width: 100%;
   transition: 2s ease;
 }
 .scotty404 img:hover {
@@ -319,7 +320,7 @@ nav .navbar-toggler {
 }
 .caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3 {
   max-width: 80vw;
-  font-size: clamp(2.5rem, 2vh, 5rem);
+  font-size: clamp(2rem, 2vh, 4rem);
 }
 
 .hr2 {
@@ -341,6 +342,9 @@ nav .navbar-toggler {
 @media (max-width: 480px) {
   body {
     box-sizing: border-box;
+  }
+  .title404 h2 {
+    margin: 0px auto 10px;
   }
 }
 /*Styling of the About webpage*/
