--- a/style/_page404.scss
+++ b/style/_page404.scss
@@ -36,6 +36,8 @@
     width: 100%;
     img {
         width: 100%;
+        max-width: 80vw;
+        height: auto;
         transition: 2s ease;
         &:hover {
             transform: scale(1.2);
@@ -67,14 +69,23 @@
             font-size: calc(1em + 1vmin);
         }
     }
+    .title404 {
+    margin: 10px auto;
+    }
 }
 
 @media (max-width: 480px) {
     body {
         box-sizing: border-box;
     }
-    .title404
-        h2 {
-            margin: 0px auto 10px;
+    .title404{
+        margin: 10px auto 20px;
+    }
+    .scotty404 {
+        img {
+            &:hover {
+                transform: none;
+            }
         }
+    }
 }
