Adding headers to scotty.html.-

--- a/style/_global.scss
+++ b/style/_global.scss
@@ -241,6 +241,10 @@ nav {
             font-size: calc(0.75em + 1vmin);
             margin: 20px 15px;
         }
+        h2 {
+            font-size: calc(1em + 1vmin);
+            margin: 20px 15px;
+        }
     }
     hr {
         margin: 10px auto;
@@ -290,8 +294,12 @@ nav {
         margin: 2vh 2vw;
         height: 100%;
         p {
-            font-size: calc(0.65em + 1vmin);
+            font-size: calc(0.75em + 1vmin);
             margin: 15px;
+        }
+        h2 {
+            font-size: calc(1em + 1vmin);
+            margin: 20px 15px;
         }
     }
 }
