--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ body {
   height: 100%;
   align-items: center;
 }
-body p, body .mainGrid h3, .mainGrid body h3 {
+body p, body .mainGrid h3, .mainGrid body h3, body .scottyT1 h2, body .scottyT3 h2, body .scottyT2 h2, .scottyT1 body h2, .scottyT3 body h2, .scottyT2 body h2, body .programText h2, .programText body h2 {
   font-size: clamp(1.5rem, 2vw, 4rem);
   font-family: "Verdana", "Geneva", sans-serif;
   max-width: 90vw;
@@ -135,7 +135,7 @@ nav .navbar-toggler {
     margin: 2vh 2vw;
     height: 100%;
   }
-  body p, body .mainGrid h3, .mainGrid body h3 {
+  body p, body .mainGrid h3, .mainGrid body h3, body .scottyT1 h2, body .scottyT3 h2, body .scottyT2 h2, .scottyT1 body h2, .scottyT3 body h2, .scottyT2 body h2, body .programText h2, .programText body h2 {
     font-size: clamp(2rem, 2vw, 3.5rem);
     margin: 20px 30px;
   }
@@ -167,7 +167,7 @@ nav .navbar-toggler {
   nav {
     margin: 10px auto;
   }
-  p, .mainGrid h3 {
+  p, .mainGrid h3, .scottyT1 h2, .scottyT3 h2, .scottyT2 h2, .programText h2 {
     font-size: clamp(1.5rem, 2vw, 4rem);
   }
   .footer a img {
@@ -210,8 +210,12 @@ nav .navbar-toggler {
     margin: 2vh 4vw;
     height: 100%;
   }
-  body p, body .mainGrid h3, .mainGrid body h3 {
+  body p, body .mainGrid h3, .mainGrid body h3, body .scottyT1 h2, body .scottyT3 h2, body .scottyT2 h2, .scottyT1 body h2, .scottyT3 body h2, .scottyT2 body h2, body .programText h2, .programText body h2 {
     font-size: calc(0.75em + 1vmin);
+    margin: 20px 15px;
+  }
+  body h2 {
+    font-size: calc(1em + 1vmin);
     margin: 20px 15px;
   }
   hr {
@@ -255,9 +259,13 @@ nav .navbar-toggler {
     margin: 2vh 2vw;
     height: 100%;
   }
-  body p, body .mainGrid h3, .mainGrid body h3 {
-    font-size: calc(0.65em + 1vmin);
+  body p, body .mainGrid h3, .mainGrid body h3, body .scottyT1 h2, body .scottyT3 h2, body .scottyT2 h2, .scottyT1 body h2, .scottyT3 body h2, .scottyT2 body h2, body .programText h2, .programText body h2 {
+    font-size: calc(0.75em + 1vmin);
     margin: 15px;
+  }
+  body h2 {
+    font-size: calc(1em + 1vmin);
+    margin: 20px 15px;
   }
 }
 /*404 Page Styling*/
@@ -297,12 +305,12 @@ nav .navbar-toggler {
 .scotty404 {
   grid-area: scotty404;
   text-align: center;
+  width: 50%;
   margin: 20px auto;
-  width: 100%;
+  max-width: 60vw;
 }
 .scotty404 img {
   width: 100%;
-  max-width: 80vw;
   height: auto;
   transition: 2s ease;
 }
@@ -320,7 +328,7 @@ nav .navbar-toggler {
   padding: 20px;
   letter-spacing: 0.1em;
 }
-.caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3 {
+.caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3, .caption404 .scottyT1 h2, .caption404 .scottyT3 h2, .caption404 .scottyT2 h2, .scottyT1 .caption404 h2, .scottyT3 .caption404 h2, .scottyT2 .caption404 h2, .caption404 .programText h2, .programText .caption404 h2 {
   max-width: 80vw;
   font-size: clamp(2rem, 2vh, 4rem);
 }
@@ -337,7 +345,7 @@ nav .navbar-toggler {
   .title404 {
     font-size: calc(1.5em + 1vmin);
   }
-  .caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3 {
+  .caption404 p, .caption404 .mainGrid h3, .mainGrid .caption404 h3, .caption404 .scottyT1 h2, .caption404 .scottyT3 h2, .caption404 .scottyT2 h2, .scottyT1 .caption404 h2, .scottyT3 .caption404 h2, .scottyT2 .caption404 h2, .caption404 .programText h2, .programText .caption404 h2 {
     font-size: calc(1em + 1vmin);
   }
   .title404 {
@@ -505,21 +513,25 @@ nav .navbar-toggler {
 
 .programText {
   grid-area: programText;
+  display: flex;
+  flex-direction: column;
 }
-.programText p, .programText .mainGrid h3, .mainGrid .programText h3 {
+.programText p, .programText .mainGrid h3, .mainGrid .programText h3, .programText h2 {
   margin: 20px auto;
 }
 .programText hr {
   margin: 15px auto;
+  width: 80%;
+  height: 2px;
+  border: none;
 }
-
 .hr3 {
   grid-area: hr3;
 }
 
 .tableTitle {
   grid-area: tableTitle;
-  font-size: clamp(2rem, 3vh, 5rem);
+  font-size: clamp(2.5rem, 3vh, 5rem);
   color: #ffc107;
   margin: 0px auto 25px auto;
   text-align: center;
@@ -534,7 +546,7 @@ nav .navbar-toggler {
 .table {
   grid-area: table;
   max-width: 85%;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .table tbody tr:nth-child(odd) {
   font-size: clamp(1.5rem, 2vh, 3rem);
@@ -578,7 +590,7 @@ nav .navbar-toggler {
 @media (max-width: 1024px) {
   .table {
     max-width: 95%;
-    margin: 0 auto;
+    margin: 10px auto;
   }
   .table tbody tr:nth-child(odd) {
     font-size: calc(0.75em + 1vmin);
@@ -639,10 +651,9 @@ nav .navbar-toggler {
   height: auto;
   align-items: center;
 }
-.scottyT1 p, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT3 p, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3, .scottyT2 p, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3 {
+.scottyT1 p, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT3 p, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3, .scottyT2 p, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3, .scottyT1 h2, .scottyT3 h2, .scottyT2 h2 {
   font-style: italic;
 }
-
 .hr2 {
   grid-area: hr2;
 }
@@ -703,7 +714,7 @@ nav .navbar-toggler {
 }
 
 @media (max-width: 1024px) {
-  .scottyT1 p, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT2 p, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3, .scottyT3 p, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3 {
+  .scottyT1 p, .scottyT1 .mainGrid h3, .mainGrid .scottyT1 h3, .scottyT2 p, .scottyT2 .mainGrid h3, .mainGrid .scottyT2 h3, .scottyT3 p, .scottyT3 .mainGrid h3, .mainGrid .scottyT3 h3, .scottyT1 h2, .scottyT2 h2, .scottyT3 h2 {
     font-size: calc(1em + 1vmin);
   }
 }
@@ -716,6 +727,10 @@ nav .navbar-toggler {
   }
   .scottyI1 img:hover {
     transform: none;
+  }
+  main .scottyT1 h2, main .scottyT2 h2, main .scottyT3 h2 {
+    font-size: calc(1.15em + 1vmin);
+    margin: 20px 15px;
   }
 }
 /*Styling of the Videos webpage*/
@@ -789,7 +804,7 @@ nav .navbar-toggler {
 .videoT3 {
   grid-area: videoT3;
 }
-.videoT3 p a span, .videoT3 .mainGrid h3 a span, .mainGrid .videoT3 h3 a span {
+.videoT3 p a span, .videoT3 .mainGrid h3 a span, .mainGrid .videoT3 h3 a span, .videoT3 .programText h2 a span, .programText .videoT3 h2 a span, .videoT3 .scottyT1 h2 a span, .scottyT1 .videoT3 h2 a span, .videoT3 .scottyT2 h2 a span, .scottyT2 .videoT3 h2 a span, .videoT3 .scottyT3 h2 a span, .scottyT3 .videoT3 h2 a span {
   font-style: italic;
 }
 
@@ -907,12 +922,12 @@ nav .navbar-toggler {
   height: auto;
   overflow: visible;
 }
-.indexTexto2 p a, .indexTexto2 .mainGrid h3 a, .mainGrid .indexTexto2 h3 a {
+.indexTexto2 p a, .indexTexto2 .programText h2 a, .programText .indexTexto2 h2 a, .indexTexto2 .scottyT1 h2 a, .scottyT1 .indexTexto2 h2 a, .indexTexto2 .scottyT2 h2 a, .scottyT2 .indexTexto2 h2 a, .indexTexto2 .scottyT3 h2 a, .scottyT3 .indexTexto2 h2 a, .indexTexto2 .mainGrid h3 a, .mainGrid .indexTexto2 h3 a {
   text-decoration: none;
   display: inline-block;
   transition: all 0.5s ease;
 }
-.indexTexto2 p a:hover, .indexTexto2 .mainGrid h3 a:hover, .mainGrid .indexTexto2 h3 a:hover {
+.indexTexto2 p a:hover, .indexTexto2 .programText h2 a:hover, .programText .indexTexto2 h2 a:hover, .indexTexto2 .scottyT1 h2 a:hover, .scottyT1 .indexTexto2 h2 a:hover, .indexTexto2 .scottyT2 h2 a:hover, .scottyT2 .indexTexto2 h2 a:hover, .indexTexto2 .scottyT3 h2 a:hover, .scottyT3 .indexTexto2 h2 a:hover, .indexTexto2 .mainGrid h3 a:hover, .mainGrid .indexTexto2 h3 a:hover {
   color: #dc3545;
 }
 
@@ -929,7 +944,7 @@ nav .navbar-toggler {
   .indexGrid {
     margin: 5px;
   }
-  .indexGrid p, .indexGrid .mainGrid h3, .mainGrid .indexGrid h3 {
+  .indexGrid p, .indexGrid .programText h2, .programText .indexGrid h2, .indexGrid .scottyT1 h2, .scottyT1 .indexGrid h2, .indexGrid .scottyT2 h2, .scottyT2 .indexGrid h2, .indexGrid .scottyT3 h2, .scottyT3 .indexGrid h2, .indexGrid .mainGrid h3, .mainGrid .indexGrid h3 {
     font-size: calc(0.75em + 1vmin);
   }
   .mainGrid {
@@ -956,7 +971,7 @@ nav .navbar-toggler {
     margin: 10px auto;
     justify-content: center;
   }
-  .mainGrid .titleContainer p, .mainGrid .titleContainer h3 {
+  .mainGrid .titleContainer p, .mainGrid .titleContainer .programText h2, .programText .mainGrid .titleContainer h2, .mainGrid .titleContainer .scottyT1 h2, .scottyT1 .mainGrid .titleContainer h2, .mainGrid .titleContainer .scottyT2 h2, .scottyT2 .mainGrid .titleContainer h2, .mainGrid .titleContainer .scottyT3 h2, .scottyT3 .mainGrid .titleContainer h2, .mainGrid .titleContainer h3 {
     font-weight: bold;
     color: #dc3545;
     font-weight: bold;
@@ -967,7 +982,7 @@ nav .navbar-toggler {
     grid-area: indexTexto1;
     overflow: visible;
   }
-  .mainGrid .indexTexto1 .textContainer p, .mainGrid .indexTexto1 .textContainer h3 {
+  .mainGrid .indexTexto1 .textContainer p, .mainGrid .indexTexto1 .textContainer .programText h2, .programText .mainGrid .indexTexto1 .textContainer h2, .mainGrid .indexTexto1 .textContainer .scottyT1 h2, .scottyT1 .mainGrid .indexTexto1 .textContainer h2, .mainGrid .indexTexto1 .textContainer .scottyT2 h2, .scottyT2 .mainGrid .indexTexto1 .textContainer h2, .mainGrid .indexTexto1 .textContainer .scottyT3 h2, .scottyT3 .mainGrid .indexTexto1 .textContainer h2, .mainGrid .indexTexto1 .textContainer h3 {
     line-height: 1.5;
     margin-bottom: 10px;
   }
